@@ -1,10 +1,16 @@
-# Trabalho Spotify Jr CEFET-MG
+# Trabalho Spotify Jr CEFET/MG
 
 Para acessar a .jar recorte e cole esta na pasta `"\Spotify_Jr"` abra o terminal e execute a seguinte linha de comando, com o terminal apontando para a pasta "\Spotify_Jr", 
+
+Para Windows:
 
 ```bash
 java -jar --enable-preview --module-path lib\javafx-sdk-16\lib --add-modules javafx.controls,javafx.fxml,javafx.media Spotify_Jr.jar
 ```
 
+Para Linux:
 
+```bash
+java -jar --enable-preview --module-path lib/javafx-sdk-17-linux/lib --add-modules javafx.controls,javafx.fxml,javafx.media Spotify_Jr_Oficial-master.jar
+```
 
